--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,60 @@
-*.exe
+# next 3 lines for ignoring unix executable files
+# ignore/blacklist everything.
+*
+# do not ignore any file.
+!*.*
+# do not ignore any directory.
+!*/
+
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
 *.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
